updated tex file

--- a/Final Project LaTeX/project proposal/main.tex
+++ b/Final Project LaTeX/project proposal/main.tex
@@ -98,6 +98,11 @@ $\bullet$ Use an agile methodology and user centred UX/UI design driven by user 
 The main challenge 
 
 \subsubsection{Scope}
+The scope of the project is limited to the design and implementation of a mobile application. The application will be designed and built in several stages as listed below:
+1. Discovery Stage (including market research)
+2. UX Design
+3. UI Design
+4. Application Development (sprints including iterative testing).
 
 
 \section{Time Plan}
