--- a/Final Project LaTeX/project proposal/main.tex
+++ b/Final Project LaTeX/project proposal/main.tex
@@ -70,42 +70,37 @@ Joshua Robertson (\href{mailto:hi20003@bristol.ac.uk}{hi20003@bristol.ac.uk})
 Dr. Alex Kavvos (\href{mailto:alex.kavvos@bristol.ac.uk}{alex.kavvos@bristol.ac.uk})
 
 \subsection{Keywords}
-$\bullet$ Software Engineering
+$\bullet$ Software Development
 \newline
-$\bullet$ User/ Activity Centred Design
-\newline
-$\bullet$ Agile Methodology
-\newline
-$\bullet$ Mobile Application Development
-\newline
-$\bullet$ External Partner
 
 \section{Project Information}
 \subsection{Motivations/ Addressed Problems/ User Group}
-The motivations behind this project is to address the issue of connecting barbers with clients, given the current covid issues and regulations. The intended user group is people of any age or gender that wish to get a haircut from the safety of their home, rather than travel to a conventional hairdresser or barber.
+The motivations behind this project is to address the issue of connecting barbers with clients, given the current covid issues and regulations. Although there currently exists a plethora of applications designed for this purpose, here I propose a novel application which follows more closely to the uber model. Whereby users of the application can be instantly connected to the nearest roaming hairdresser. 
+
 \subsection{Key Objectives/ Challenges/ Scope}
 \subsubsection{Key Objectives}
-$\bullet$ Identify any gaps in the market that can be addressed through the application, including, but not limited to the want of many people to have easy and quick access to hairdressers, along with the practicality and speed of the 'uber' model.
+$\bullet$ Identify any gaps in the market that can be addressed through the application, including.
 \newline
 $\bullet$ Create a mobile application using dart/ flutter that exhibits cross functionality between platforms.
 \newline
-$\bullet$ Integrate several features including; a booking system, an ordering system, and a delivery system that is integrated with google maps API.
+$\bullet$ Implement several features including; a booking system, an ordering system, and a delivery system that is integrated with google maps API.
 \newline
 $\bullet$ Use an agile methodology and user centred UX/UI design driven by user personas and interviews to carry out sprints that match the needs of the intended user.
 \newline
 
 \subsubsection{Challenges}
-The main challenge 
+As the project is limited to 3 months the main challenges lie within the brief timeline. To try to mitigate this I have created a thorough timeline of the proposed development which can be seen in the attached gantt chart. Within the chart I have also left myself some room incase of any overun. 
 
 \subsubsection{Scope}
 The scope of the project is limited to the design and implementation of a mobile application. The application will be designed and built in several stages as listed below:
 1. Discovery Stage (including market research)
-2. UX Design
-3. UI Design
-4. Application Development (sprints including iterative testing).
+2. Design and Architecture
+3. UX/ UI Design
+4. Application Development
+5. Testing/ Deployment
 
 
 \section{Time Plan}
-Please see attached 'gantt-chart.xlsx'
+Please see attached 'jr-gantt-chart.xlsx'
 
 \end{document}
