added barber images, began implementing home page of application

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -72,6 +72,32 @@ anchorcolor = blue]{hyperref}
 	\end{titlepage}
 	
 	\section{Introduction}
+	The COVID pandemic has brought with it a shift in perceptions around leaving the home and with that a desire for more homeworking and access to remote services. For example, remote workers show an increase in job satisfaction \cite{flexjobs, 2019}, \cite{CNBC, 2020}, are more productive, have better mental health \cite(flexjobs, 2020) and even make more money (ADD CITE).
+	
+	\section{Market Analysis}
+	In order to gauge whether there is a market for the proposed analysis, a survey was carried out in which users were asked about whether they could see themselves using the application features, among other things.
+	 
+	\subsection{Existing Applications}
+	
+	
+	\subsection{The Target User}
+	
+
+	\section{User Personas}
+	The creation of user personas representing fictitious, archetypal users is an essential part of application development \cite{Grudin and Pruitt, 2002} and allows a deep understanding of the target user to be sought and implemented within the features and design of the application \cite{Long, 2009}. Although there are some shortcomings to qualitative persona generation, such as validity concerns and user bias \cite{Chapman and Milham, 2007} which are addressed by other methods, such as data-driven personas \cite{Mcginn and Kotamraju, 2008}, we have decided to stick with qualitative methods, which allow for enough brevity and depth for the scope of the project. Here we created 3 personas, which are discussed in detail below.
+	\begin{itemize}
+		\item Persona 1: 
+		
+		INSERT PERSONA INFO
+		\item Persona 2:
+		\item Persona 3:
+	\end{itemize}
+
+
+	\section{Development}
+	\subsection{Sprints}
+	\subsubsection{Sprint 1 - Setup}
+	The recommended setup within the project is to 
 
 	
 \end{document}
