--- a/Final Project LaTeX/project proposal/main.tex
+++ b/Final Project LaTeX/project proposal/main.tex
@@ -101,6 +101,6 @@ The scope of the project is limited to the design and implementation of a mobile
 
 
 \section{Time Plan}
-Please see attached 'jr-gantt-chart.xlsx'
+Please see the following \href{https://drive.google.com/file/d/1Yn_NGCbC0ACyhp4jYBQV2O3T7yqof0sN/view?usp=sharing}{gantt chart}
 
 \end{document}
