updated report introduction section

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -111,9 +111,13 @@ anchorcolor = blue]{hyperref}
 	\end{itemize}
 
 
-	\subsection{Sprints}
-	\subsubsection{Sprint 1 - Setup}
+	\section{Production - Sprints}
+	\subsection{Sprint 1 - Setup}
 	During the first sprint, the task involved setting up the environment in preparation to begin development. For the editor, Android Studio was 
+	
+	\subsection{Sprint X - UI}
+	Flutter offer an Adobe XD plugin to turn wireframes directly into code, however, this was not used for several reasons. In Adobe XD components are positioned absolutely, whereas in Flutter it is done relatively, leading to some issues with positioning. Adobe XD also does not contain customer properties and therefore mapping these to components, such as title is not possile.
+	
 
 	
 \end{document}
