Navigation from available now to product screen

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -101,7 +101,7 @@ anchorcolor = blue]{hyperref}
 	
 
 	\subsection{User Personas}
-	The creation of user personas representing fictitious, archetypal users is an essential part of application development \cite{Grudin and Pruitt, 2002} and allows a deep understanding of the target user to be sought and implemented within the features and design of the application \cite{Long, 2009}. Although there are some shortcomings to qualitative persona generation, such as validity concerns and user bias \cite{Chapman and Milham, 2007} which are addressed by other methods, such as data-driven personas \cite{Mcginn and Kotamraju, 2008}, we have decided to stick with qualitative methods, which allow for enough brevity and depth for the scope of the project. Here we created 3 personas, which are discussed in detail below.
+	The creation of user personas representing fictitious, archetypal users is an essential part of application development \cite{Grudin and Pruitt, 2002} and allows a deep understanding of the target user to be sought and implemented within the features and design of the application \cite{Long, 2009}. There are, however some shortcomings to qualitative persona generation, such as validity concerns and user bias \cite{Chapman and Milham, 2007} and although they are addressed by other methods, such as data-driven personas \cite{Mcginn and Kotamraju, 2008}, there require a broad user base and therefore we have decided to stick with qualitative methods, which allow for enough brevity and depth for the scope of the project. Here we created 3 personas, which are discussed in detail below.
 	\begin{itemize}
 		\item Persona 1: 
 		
