--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -93,6 +93,24 @@ anchorcolor = blue]{hyperref}
 	 
 	\subsubsection{Existing Applications}
 	
+	\subsection{Deciding on a Platform}
+	\subsubsection{Mobile vs Desktop}
+	
+	\subsubsection{Android vs iOS}
+	An important consideration when creating a mobile application is deciding on which platform to choose. The two largest mobile providers currently are android and apple (iOS). Historically, iOS has dominated the market share, with a 42.02\% market share in January 2011 compared to Androids 12.42\% (figure \ref{fig:ios-android}). Despite this, in recent years android OS has become more popular, even holding a greater share several times over the last few years and currently trails by around 2\%
+	
+	and even overtaken iOS several times across the past few years, with the two now having a relatively equal share of the market.
+		
+	\begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.4]{images/ios-android.png}
+		\caption{iOS vs Android Market Share Over The Last 10 Years}
+		\label{fig:ios-android}
+		\cite{stat-counter-21}
+	\end{figure}
+	
+	With this change has brought with it a push towards frameworks that allow for development across multiple platforms, such as React Native (https://reactnative.dev/) and Flutter (flutter.dev/). For this reason, a cross platform application using Flutter as the development framework was used to create the application. In this way, both operating systems can be targeted and the application can be accessed by the greatest number of users.
+	
 	
 	\subsubsection{The Target User}
 	
@@ -110,7 +128,27 @@ anchorcolor = blue]{hyperref}
 		\item Persona 3:
 	\end{itemize}
 
-
+	\section{Prototyping}
+	An important component of UCD and more generally UX is wireframing, which involves making a mock-up of the application that acts as an early prototype to influence later development, along with allowing for early beta testing \cite{Arnowitz Arent Berger}. For the wireframing application Adobe XD was chosen for several reasons. Firstly, it has strong prototyping functionality, allowing the user to click around the application through the use of ‘components’. This interactivity means that early testers can get a real feel for how the application works. An illustration of this can be seen below, whereby each arrow represents a state change in the form of a trigger/ action pair, whereby for example a user could click on ‘Available Right Now’ and be taken to the ‘Checkout’ as seen in figure \ref{fig:prot-comp} below.
+		\begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.5]{images/prototyping-components.png}
+		\caption{Component Interactivity within Adobe XD}
+		\label{fig:prot-comp}
+	\end{figure}
+	
+	
+	Adobe XD also allows for easy distribution of the prototype in the form of a sharable link that opens in the browser and encompasses the same functionality and components that can be found within the application itself, meaning that anyone with access to a browser can test the prototype. Along with this, this prototype also allows for comments to be made, which are fed back to the owner. This comment capability was used early on during beta testing when it was sent out with the early questionnaire and influenced initial design decisions \cite{smashing-magazine}.
+	
+	When designing the screens there was a strong focus on user experience following Nielsons 10 Heuristics for User Interface Design \cite{nielson-normal-group-2020} . For example, the functionality was kept as minimal as possible to avoid clittering and avoid cognitive load on the user, the user was given control to go back to previous screens to allow for user control and freedom and simple and self-explanatory language was used to apply recognition over recall. For example, the Sign In screen below extraneous text was kept to a minimum by using images for the login items, such as Google, Facebook and Twitter, a sign up button was included to allow the user to access the application through creating a new account and large, clear sign in forms and buttons were used.
+	
+	\begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.85]{images/sign-in.png}
+		\caption{Sign In Page Made with Adobe XD}
+		\label{fig:sign-in}
+	\end{figure}
+	
 	\section{Production}
 	\subsection{Version Control}
 	
