--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -97,10 +97,8 @@ anchorcolor = blue]{hyperref}
 	\subsubsection{Mobile vs Desktop}
 	
 	\subsubsection{Android vs iOS}
-	An important consideration when creating a mobile application is deciding on which platform to choose. The two largest mobile providers currently are android and apple (iOS). Historically, iOS has dominated the market share, with a 42.02\% market share in January 2011 compared to Androids 12.42\% (figure \ref{fig:ios-android}). Despite this, in recent years android OS has become more popular, even holding a greater share several times over the last few years and currently trails by around 2\%
+	An important consideration when creating a mobile application is deciding on which platform to choose. The two largest mobile providers currently are android and apple (iOS). Historically, iOS has dominated the market share, with a 42.02\% market share in January 2011 compared to Androids 12.42\% (figure \ref{fig:ios-android}). Despite this, in recent years android OS has become more popular, even holding a greater share several times over the last few years and currently trails by only around 2\%.
 	
-	and even overtaken iOS several times across the past few years, with the two now having a relatively equal share of the market.
-		
 	\begin{figure}[H]
 		\centering
 		\includegraphics[scale=0.4]{images/ios-android.png}
