--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -72,7 +72,9 @@ anchorcolor = blue]{hyperref}
 	\end{titlepage}
 	
 	\section{Introduction}
-	The COVID pandemic has brought with it a shift in perceptions around leaving the home and with that a desire for more homeworking and access to remote services. For example, remote workers show an increase in job satisfaction \cite{flexjobs, 2019}, \cite{CNBC, 2020}, are more productive, have better mental health \cite(flexjobs, 2020) and even make more money (ADD CITE).
+	The COVID pandemic has brought with it a shift in perceptions around leaving the home and with that a desire for more homeworking and easier access to remote services. Even with a reduction in COVID cases following a wave of vaccinations, it is likely that home working will continue to a greater extent than was seen previously, with home workers showing an increase in job satisfaction \cite{flexjobs, 2019}, \cite{CNBC, 2020}, productivity, mental health \cite(flexjobs, 2020) and even making more money (ADD CITE). 
+	Although there already exists several apps that allow for home bookings, none follow the "uber" model, of allowing for immediate booking and delivery of home haircuts. This app therefore will facilitate this, along with aiming to explore any other market gaps through early research.
+	
 	
 	New Product Development refers to the entirety of processes leading to bringing a product to market and encompasses several steps as seen in figure \ref{fig:npd} below.
 	\newline
@@ -117,13 +119,60 @@ anchorcolor = blue]{hyperref}
 	
 
 	\subsection{User Personas}
-	The creation of user personas representing fictitious, archetypal users is an essential part of application development \cite{Grudin and Pruitt, 2002} and allows a deep understanding of the target user to be sought and implemented within the features and design of the application \cite{Long, 2009}. There are, however some shortcomings to qualitative persona generation, such as validity concerns and user bias \cite{Chapman and Milham, 2007} and although they are addressed by other methods, such as data-driven personas \cite{Mcginn and Kotamraju, 2008}, there require a broad user base and therefore we have decided to stick with qualitative methods, which allow for enough brevity and depth for the scope of the project. Here we created 3 personas, which are discussed in detail below.
+	The creation of user personas representing fictitious, archetypal users is an essential part of application development \cite{Grudin and Pruitt, 2002} and allows a deep understanding of the target user to be sought and implemented within the features and design of the application \cite{Long, 2009}. There are, however, some shortcomings to qualitative persona generation, such as validity concerns and user bias \cite{Chapman and Milham, 2007} and although they are addressed by other methods, such as data-driven personas \cite{Mcginn and Kotamraju, 2008}, there require a broad user base and therefore we have decided to stick with qualitative methods, which allow for enough brevity and depth for the scope of the project.
+	
+	Here 3 user personas were created, which are discussed in detail below.
 	\begin{itemize}
 		\item Persona 1: 
 		
-		INSERT PERSONA INFO
+		Name: Sarah Johnson
+		
+		Profile: 
+		\begin{figure}[H]
+
+			\includegraphics[scale=0.2]{images/persona_1.png}
+			\caption{Persona 1}
+			\label{fig:persona_1}
+		\end{figure}
+		
 		\item Persona 2:
+		
+		Name:  Claire Sheppard
+		
+		
+		Profile: 
+		\begin{figure}[H]
+			
+			\includegraphics[scale=0.2]{images/persona_1.png}
+			\caption{Persona 2}
+			\label{fig:persona_2}
+		\end{figure}
+		
 		\item Persona 3:
+		
+		Name: Emma Bradford
+		
+		Profile: 
+		\begin{figure}[H]
+			
+			\includegraphics[scale=0.2]{images/persona_1.png}
+			\caption{Persona 3}
+			\label{fig:persona_3}
+		\end{figure}
+	
+		\item Persona 4:
+		
+		Name:  Claire Sheppard
+		
+		
+		Profile: 
+		\begin{figure}[H]
+			
+			\includegraphics[scale=0.2]{images/persona_4.png}
+			\caption{Persona 4}
+			\label{fig:persona_4}
+		\end{figure}
+		
 	\end{itemize}
 
 	\section{Prototyping}
