--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -72,7 +72,13 @@ anchorcolor = blue]{hyperref}
 	\end{titlepage}
 	
 	\section{Introduction}
-	The COVID pandemic has brought with it a shift in perceptions around leaving the home and with that a desire for more homeworking and easier access to remote services. Even with a reduction in COVID cases following a wave of vaccinations, it is likely that home working will continue to a greater extent than was seen previously, with home workers showing an increase in job satisfaction \cite{flexjobs, 2019}, \cite{CNBC, 2020}, productivity, mental health \cite(flexjobs, 2020) and even making more money (ADD CITE). 
+	Plan - 
+	1) Covid has caused an increase in homeworking
+	2) People want greater access to remote services
+	3) People also want quick access to products
+	2 reasons for application is that people want fast and easy access to services, and it is expected now with companies i.e. amazon now offering same day delivery. and also peoples views around covid
+	
+	There is little dispute that the recent COVID-19 pandemic has had a significant impact on our daily lives. Along with having a devestating both on a societal and individual level, it has brought with it a shift in perceptions around leaving the home. Subsequently, this has led to a desire for homeworking and easier access to remote services, with employers . Even with a reduction in COVID cases following a wave of vaccinations, it is likely that home working will continue to a greater extent than was seen previously, with home workers showing an increase in job satisfaction \cite{flexjobs, 2019}, \cite{CNBC, 2020}, productivity, mental health \cite(flexjobs, 2020) and even making more money (ADD CITE). 
 	Although there already exists several apps that allow for home bookings, none follow the "uber" model, of allowing for immediate booking and delivery of home haircuts. This app therefore will facilitate this, along with aiming to explore any other market gaps through early research.
 	
 	
@@ -94,6 +100,7 @@ anchorcolor = blue]{hyperref}
 	In order to gauge whether there is a market for the proposed analysis, a survey was carried out in which users were asked about whether they could see themselves using the application features, among other things.
 	 
 	\subsubsection{Existing Applications}
+	As previously discusses there exists a variety of similar applications, for which the most prominent will be discussed below, along with
 	
 	\subsection{Deciding on a Platform}
 	\subsubsection{Mobile vs Desktop}
