--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -105,7 +105,7 @@ anchorcolor = blue]{hyperref}
 	\subsection{Deciding on a Platform}
 	\subsubsection{Mobile vs Desktop}
 	
-	\subsubsection{Android vs iOS}
+	\subsubsection{Frontend: Android vs iOS}
 	An important consideration when creating a mobile application is deciding on which platform to choose. The two largest mobile providers currently are android and apple (iOS). Historically, iOS has dominated the market share, with a 42.02\% market share in January 2011 compared to Androids 12.42\% (figure \ref{fig:ios-android}). Despite this, in recent years android OS has become more popular, even holding a greater share several times over the last few years and currently trails by only around 2\%.
 	
 	\begin{figure}[H]
@@ -116,7 +116,16 @@ anchorcolor = blue]{hyperref}
 		\cite{stat-counter-21}
 	\end{figure}
 	
-	With this change has brought with it a push towards frameworks that allow for development across multiple platforms, such as React Native (https://reactnative.dev/) and Flutter (flutter.dev/). For this reason, a cross platform application using Flutter as the development framework was used to create the application. In this way, both operating systems can be targeted and the application can be accessed by the greatest number of users.
+	With this change has brought with it a push towards frameworks that allow for development across multiple platforms, such as React Native (https://reactnative.dev/) and Flutter (flutter.dev/). For this reason, it was decided that a cross platform would be used, which is further discussed below.
+	
+	\subsection{Frontend: Programming Language}
+	
+	\subsection{Backend: SQL vs noSQL database}
+	Initially a relational database model was created, which can be seen below (ADD DATABASE). This was later changed to use Google Firestore (\cite{firestore}), a noSQL database that relies on  nested 'documents' within 'collections'. This was chosen for several reasons. Firstly, as the chosen language 'Dart' is run by Google, using firestore allows for greater integration and congruence with the platform and APIs. Firestore also allows for rapid scalability, along with using Googles excellent cloud platform.
+	
+	Another important feature of noSQL databases is the ability to easily modify the internal data in response to changing business requirements, in an interative way that allows fordo you use relationship data in firebase stackoverflow modification throughout the application lifestyle and therefore easy scaling.
+	Finally, the current model requires that each seperate barbers will need similar, although different data. For example, alough two barbers will likely share the product 'haircut', the description of each is likely to be entirely different making a normal SQL database difficult to implement.
+	
 	
 	
 	\subsubsection{The Target User}
@@ -213,7 +222,7 @@ anchorcolor = blue]{hyperref}
 	Flutter offer an Adobe XD plugin to turn wireframes directly into code, however, this was not used for several reasons. In Adobe XD components are positioned absolutely, whereas in Flutter it is done relatively, leading to several issues with positioning. Adobe XD also does not contain customer properties and therefore mapping these to components, such as title is not possile.
 	
 	\subsection{Sprint X - Backend Design}
-	Initially a relational database model was created, which can be seen below (ADD DATABASE). This was later changed to use Google Firestore (\cite{firestore}), a noSQL database that relies on  nested 'documents' within 'collections'. This was chosen for several reasons. Firstly, as the chosen language 'Dart' is run by Google, using firestore allows for greater integration and congruence with the platform and APIs. Firestore also allows for rapid scalability, along with using Googles excellent cloud platform.
+	
 	
 
 	
