material vs cupertino section

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -221,6 +221,9 @@ anchorcolor = blue]{hyperref}
 	\subsection{Sprint X - UI}
 	Flutter offer an Adobe XD plugin to turn wireframes directly into code, however, this was not used for several reasons. In Adobe XD components are positioned absolutely, whereas in Flutter it is done relatively, leading to several issues with positioning. Adobe XD also does not contain customer properties and therefore mapping these to components, such as title is not possile.
 	
+	\subsubsection{Cupertino vs Material}
+	The final project was built using material due to..
+	
 	\subsection{Sprint X - Backend Design}
 	
 	
