Updated report notes

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -226,6 +226,9 @@ anchorcolor = blue]{hyperref}
 	
 	\subsection{Sprint X - Backend Design}
 	
+	Loading all parentBarbers/ barbers and products - 
+	When entering the app it is more effecient to make one call to the server rather than multiple due to GPS restrictions. Therefore ParentBarbers, barbers and all of their products are loaded within a certain radius, rather than loading parentBarbers and barbers separately throughout the app. 
+	
 	
 
 	
