--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -229,6 +229,8 @@ anchorcolor = blue]{hyperref}
 	Loading all parentBarbers/ barbers and products - 
 	When entering the app it is more effecient to make one call to the server rather than multiple due to GPS restrictions. Therefore ParentBarbers, barbers and all of their products are loaded within a certain radius, rather than loading parentBarbers and barbers separately throughout the app. 
 	
+	Don't nest as calls will fetch all of the parent and nested structured so better to have separate data.
+	
 	
 
 	
