Updated backend report section

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -231,6 +231,10 @@ anchorcolor = blue]{hyperref}
 	
 	Don't nest as calls will fetch all of the parent and nested structured so better to have separate data.
 	
+	\subsection{Sprint X - Location}
+	https://firebase.google.com/docs/firestore/solutions/geoqueries
+	Once the user logs in they give their location in the form of their address. This is stored in 'geohashes', which are co-ordinates hashed to be a single Base32 string.
+	
 	
 
 	
