--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -217,6 +217,8 @@ anchorcolor = blue]{hyperref}
 	
 	\subsection{Sprint 1 - Setup}
 	During the first sprint, the task involved setting up the environment in preparation to begin development. For the editor, Android Studio was 
+	TALK ABOUT SCREENS/ MODELS/ HELPER etc
+	
 	
 	\subsection{Sprint X - UI}
 	Flutter offer an Adobe XD plugin to turn wireframes directly into code, however, this was not used for several reasons. In Adobe XD components are positioned absolutely, whereas in Flutter it is done relatively, leading to several issues with positioning. Adobe XD also does not contain customer properties and therefore mapping these to components, such as title is not possile.
