implemented return_image.dart

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -284,7 +284,7 @@ anchorcolor = blue]{hyperref}
 	Here we discuss any items not covered within a specified sprint.
 	
 	\subsubsection{Widgets}
-	Several widgets were used to increase readability and brevity of code. For example, 'ReturnText()' allows for easy access to the main textual components used and improves readability. 
+	Several widgets were used to increase readability and brevity of code. For example, 'return\_text.dart' allows for access to the main components of the Text function and 'return\_image.dart' allows for easy use of the NetworkImage function, giving brevity and readability to the code.
 	
 	\subsubsection{Common Items}
 	The common items contains global variables that were accessible throughout the project. Initially this included structures and arrays that served as objects to test the functionality of the frontend, for example a barber shop class with a nested list of barbers classes, each with a name, age, description etc. As backend functionality was added these items were removed. A theme class was then added which contains dart files that can be implemented. Doing it in this way meant that the application could be easily styled, without any unnecessary refactoring of code.
