file structure of report

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -229,6 +229,9 @@ anchorcolor = blue]{hyperref}
 	\subsection{Sprint 1 - Setup}
 	During the first sprint, the task involved setting up the environment in preparation to begin development. For the editor, Android Studio was 
 	TALK ABOUT SCREENS/ MODELS/ HELPER etc
+	\subsubsection{File Structure}
+	Although there is no official recommendation for structuring the app, here we follow a commonly used structure which includes models; the files that serve as collections of data that are used in conjunction with the widgets to form the user interface of the application; providers; screens; utilities; and widgets; .
+
 	
 	
 	\subsection{Sprint X - UI}
@@ -246,7 +249,7 @@ anchorcolor = blue]{hyperref}
 	\begin{lstlisting}
 		_firebaseFirestore.collection(collection).doc(userId).get()
 	\end{lstlisting}
-	which gives a search time of $\mathcal{O}$(1). 
+	which gives a search time of $\mathcal{O}$(1). 	
 	
 	\subsection{Sprint X - Backend Design}
 	
